add kafka in customers

--- a/customers/package.json
+++ b/customers/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "tsx watch src/server.ts"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
