--- a/customers/package.json
+++ b/customers/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.5.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "kafkajs": "^2.2.4"
   },
