--- a/orders/package.json
+++ b/orders/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "tsx watch src/server.ts"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.5.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "kafkajs": "^2.2.4"
   },
